--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "module": "CommonJS",
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "start": "ts-node ./src/vkAr.ts"
   },
   "dependencies": {
     "@bundlr-network/client": "^0.5.12",
