One click install. Set Keys through Environment variables. Fix image url parse bug.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TwittAR",
+  "name": "VkAR",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/JesseTheRobot/TweetStream.git",
@@ -9,6 +9,9 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "ts-node ./src/vkAr.ts"
+  },
+  "engines": {
+    "node": "14.16.0"
   },
   "dependencies": {
     "@bundlr-network/client": "^0.5.12",
@@ -35,7 +38,8 @@
     "puppeteer-extra-plugin-adblocker": "^2.11.3",
     "puppeteer-extra-plugin-stealth": "^2.4.9",
     "string-similarity": "^4.0.4",
-    "tmp-promise": "^3.0.3"
+    "tmp-promise": "^3.0.3",
+    "vkflow": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
